fix: change operations header z-index

--- a/src/pages/OrdersViewD3/components/verticalTimeline.module.scss
+++ b/src/pages/OrdersViewD3/components/verticalTimeline.module.scss
@@ -18,7 +18,7 @@
   width: 840px;
   height: 35px;
   background-color: #f5f5f5;
-  z-index: 100;
+  z-index: 5;
 }
 
 .timelineWrapper {
